<resources>
    <string name="app_name">ClassMatch</string>
    <string name="class_search_hint">Buscar disciplinas</string>
    <string name="semester">2024/01</string>
    <string name="label_students_total">Estudantes:</string>
    <string name="label_teachers_total">Professores:</string>
    <string name="label_interest">Interesse:</string>
    <string name="class_name_code">%1$s - %2$s</string>
    <string name="course_semester">%1$s - %2$s</string>
    <string name="classe_codigo_nome">%1$s - %2$s</string>
    <string name="classe_curso_semestre">%1$s - %2$d° Semestre</string>
    <string name="aluno_classes_lista_subtitulo">Selecione as disciplinas de seu interesse</string>
    <string name="classe_requisito_tooltip">Requisito para outras classes</string>
    <string name="professor_classes_lista_subtitulo">Classifique as disciplinas conforme seu interesse</string>
    <string name="orientador_classes_lista_subtitulo">Disciplinas ofertadas</string>
    <string name="descricao_botao_adicionar_classe">Adicionar classes</string>
</resources>