<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:id="@+id/cardview_classe_aluno"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/verde_claro"
    android:checkable="true"
    app:checkedIconVisible="true"
    app:checkedIcon="@drawable/baseline_check_circle_24"
    app:checkedIconTint="@color/verde">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <TextView
            android:id="@+id/textview_codigo_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/classe_codigo_nome"
            android:textColor="@color/texto"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_curso_semestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/classe_curso_semestre"
                android:textColor="@color/texto_secundario"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/imageview_requisito"
                app:layout_constraintTop_toBottomOf="@id/textview_codigo_nome"/>

    <ImageView
        android:id="@+id/imageview_requisito"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginLeft="4dp"
        android:src="@android:drawable/stat_sys_warning"
        android:visibility="visible"
        app:tint="@color/warning"
        app:layout_constraintLeft_toRightOf="@+id/textview_curso_semestre"
        app:layout_constraintBottom_toBottomOf="@+id/textview_curso_semestre"
        app:layout_constraintTop_toTopOf="@id/textview_curso_semestre"
        android:tooltipText="@string/classe_requisito_tooltip"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>