<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/verde_claro"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="16dp"
    style="@style/Widget.Material3.CardView.Filled">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <TextView
            android:id="@+id/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16sp"
            android:text="@string/class_name_code"/>

        <TextView
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/className"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:text="@string/course_semester"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/studentsResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/courseName">

            <LinearLayout
                android:id="@+id/studentsResultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/label_students_total"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/studentsTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="29"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/label_interest"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/studentsInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="29"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/studentsScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:progress="50"
                app:layout_constraintTop_toBottomOf="@id/studentsResultText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/teachersResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/studentsResult">

            <LinearLayout
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/label_teachers_total"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/teachersTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="29"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/label_interest"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/teachersInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="29"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/teachersScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:progress="50"
                app:layout_constraintTop_toBottomOf="@id/resultText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>