<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_professor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".professor.view.ProfessorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde"
            app:contentInsetStart="16dp"
            app:contentInsetEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_filtro_classes"
                android:padding="4dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@android:drawable/ic_menu_search"
                    android:tint="@color/verde"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="4dp"/>

                <EditText
                    android:id="@+id/edittext_filtro_classes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_search_hint"
                    android:textColor="@color/texto_secundario"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:theme="@style/ThemeOverlay.Material3.TextInputEditText"
                    />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:id="@+id/textview_semestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textSize="16sp"
                android:textColor="@color/texto"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor_classes_lista_subtitulo"
                android:textSize="12sp"
                android:textColor="@color/texto_secundario"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_semestre"/>

            <TextView
                android:id="@+id/textview_contador_classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/5"
                android:textSize="12sp"
                android:textColor="@color/texto_secundario"
                android:layout_marginTop="4dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_semestre"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_lista_classes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>