<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_orientador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orientador.view.OrientadorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde"
            app:contentInsetStart="16dp"
            app:contentInsetEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_filtro_classes"
                android:padding="4dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@android:drawable/ic_menu_search"
                    android:tint="@color/verde"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="4dp"/>

                <EditText
                    android:id="@+id/edittext_filtro_classes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/class_search_hint"
                    android:textColor="@color/texto_secundario"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:theme="@style/ThemeOverlay.Material3.TextInputEditText"
                    />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_semestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_ordem_classe"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeErrorColor="@android:color/transparent"
                    android:background="@drawable/spinner_classe_ordem"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/texto"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientador_classes_lista_subtitulo"
                android:textSize="12sp"
                android:textColor="@color/texto_secundario"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_container"/>

            <TextView
                android:id="@+id/textview_contador_classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="12sp"
                android:textColor="@color/texto_secundario"
                android:layout_marginTop="4dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_container"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_lista_classes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/descricao_botao_adicionar_classe"
        app:srcCompat="@drawable/ic_add"
        app:backgroundTint="@color/verde"
        app:tint="@color/white"
        app:rippleColor="@color/riple_verde_escuro"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>